--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,7 @@ pagingVersion = "3.2.1"
 pagingCompose = "3.3.0-beta01"
 roomVersion = "2.6.1"
 coilCompose = "2.6.0"
+logging_version="4.9.3"
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -48,6 +49,7 @@ androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref =
 androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "roomVersion" }
 androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomVersion" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
+squareup-logging = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "logging_version" }
 coil-svg = { module = "io.coil-kt:coil-svg", version.ref = "coilCompose" }
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
